# cmake-examples

01-basic/E-installing (copy)/: CMakeLists.txt
02-sub-projects/A-basic/sublibrary1/: CMakeLists.txt
